--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "cypress": "^11.2.0",
+    "json-server": "^0.17.1",
     "react-test-renderer": "^18.2.0"
   }
 }
